TEST_PROGRAMS/VALID/07/comments_and_semicolons_tricky_bug.go
package main
type num int // simple type alias
type point struct { // point is a struct
	x, y float64
}
